# learning

./: LICENSE  README.md  noxfile.py  pyproject.toml
poetry/: readme.md
poetry/man-dep-poetry/: pyproject.toml
poetry/man-dep-poetry/tests/: test_poetry_1.py
src/hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py
