[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "Continuous learning using Jolowicz articles."
authors = ["Leonardo Galler <leonardo.galler@l2-analytics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.7"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"