[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "Continuous learning using Jolowicz articles."
authors = ["Leonardo Galler <leonardo.galler@l2-analytics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
requests = "^2.32.3"
nox = "^2024.4.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
coverage = {extras = ["toml"], version = "^7.6.1"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report] ## You can configure Coverage.py to require full test coverage (or any other target percentage) using the fail_under option
fail_under = 100
show_missing = true