[tool.poetry]
name = "man-dep-poetry"
version = "0.1.0"
description = "My basic project to learn dependency management with Poetry"
authors = ["Leonardo Galler <leonardo.galler@l2-analytics.com>"]
readme = "README.md"
packages = [{include = "man_dep_poetry"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
