[tool.poetry]
name = "man-dep-poetry"
version = "0.1.0"
description = "My basic project to learn dependency management with Poetry"
authors = ["Leonardo Galler <leonardo.galler@l2-analytics.com>"]
readme = "README.md"
packages = [{include = "man_dep_poetry"}]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.31.0"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
